# nbf-archery-signup

./: .dockerignore  .gitignore  .~lock.Påskestevne-deltakere.csv#  Dockerfile  Påskestevne-deltakere.csv  README.md  pyproject.toml
.github/workflows/: docker-image.yml
archerysignup/: .pylintrc  README.md  entrypoint.sh  manage.py
archerysignup/archerysignup/: asgi.py  settings.py  urls.py  wsgi.py
archerysignup/signups/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
archerysignup/signups/migrations/: 0001_initial.py  0002_auto_20210416_1601.py
archerysignup/signups/static/: main.css
archerysignup/signups/templates/: base.html  competition.html  competition_list.html  result_delivery.html  results.html  thanks.html
archerysignup/signups/templates/includes/: form_pure.html
ops/: Dockerfile-nbfsignup  Dockerfile-nginx  docker-compose.yml
ops/nginx-files/: reverse-proxy.conf
