[tool.poetry]
name = "archerysignup"
version = "0.1.0"
description = "Archery competition singup application for World Archery Norway"
authors = ["Dag Olav Prestegarden <dagolav@prestegarden.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
Pillow = "^8.1.0"
django-environ = "^0.4.5"
pylint = "^2.7.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
